# Unary.Common

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Common.json  README.md  Versions.json
Steam/: Depot.json
Unary.Compiler/Windows/var/lib/mingw-get/data/: sysroot-0-002-a7c6-d7dbb5.xml
Unary.Functor/: .gitignore  CMakeLists.txt  CMakeSettings.json  Depot.json  README.md
Unary.Functor/Functor/Include/Functor/: MyApp.hpp
Unary.Functor/Functor/Source/: Main.cpp  MyApp.cpp
Unary.Make/: Build.json  Depot.json  Make.unary  Makefile  Output.json
Unary.Make/Include/: Variable.hpp
Unary.Make/Include/Unary.Make/: Package.hpp
Unary.Make/Include/Unary.Make/Abstract/: Patchers.hpp  Stringifiable.hpp
Unary.Make/Include/Unary.Make/Containers/: HashRegistry.hpp  Optional.hpp  PoolRegistry.hpp
Unary.Make/Include/Unary.Make/Enums/: BuildType.hpp  DepotType.hpp  ErrorCode.hpp
Unary.Make/Include/Unary.Make/Structs/: BuildID.hpp  BuildManifest.hpp  DepotBinaries.hpp  DepotData.hpp  DepotDependencies.hpp  DepotFlags.hpp  DepotID.hpp  DepotManifest.hpp  DepotPatch.hpp  DepotPatches.hpp  DepotVersion.hpp  ObjectData.hpp  Package.hpp  PatcherData.hpp
Unary.Make/Include/Unary.Make/Systems/: Arguments.hpp  Build.hpp  Compiler.hpp  Depots.hpp  Output.hpp  Patcher.hpp  SourceCode.hpp  Sys.hpp  System.hpp  TempFiles.hpp
Unary.Make/Include/Unary.Make/Units/: Static.hpp  TextPatcher.hpp  ThreadPool.hpp
Unary.Make/Include/Unary.Make/Utils/: Memory.hpp  Murmur.hpp  Static.hpp  String.hpp  TypeAccessor.hpp
Unary.Make/Source/: Main.cpp  Variable.cpp
Unary.Make/Source/Systems/: Build.cpp  Depots.cpp  Sys.cpp  TempFiles.cpp
Unary.Make/Source/Units/: DepotVersion.cpp
Unary.Make/Source/Utils/: Murmur.cpp  Static.cpp  String.cpp
Unary.MinGW/: version_info.txt
Unary.MinGW/include/: bfd.h  bfd_stdint.h
Unary.MinGW/include/c++/10.1.0/x86_64-w64-mingw32/bits/: c++config.h
Unary.MinGW/lib/: libstdc++.dll.a-gdb.py
Unary.MinGW/lib/cmake/clang/: ClangConfig.cmake  ClangTargets-release.cmake  ClangTargets.cmake
Unary.MinGW/lib/cmake/llvm/: LLVMConfig.cmake  LLVMExports-release.cmake  LLVMExports.cmake
Unary.MinGW/lib/gcc/x86_64-w64-mingw32/10.1.0/plugin/: gtype.state
Unary.MinGW/lib/gcc/x86_64-w64-mingw32/10.1.0/plugin/include/: auto-host.h  b-header-vars  configargs.h  insn-flags.h  options.h  tm-preds.h
Unary.MinGW/lib/gcc/x86_64-w64-mingw32/10.2.0/plugin/include/: configargs.h
Unary.MinGW/libexec/gcc/x86_64-w64-mingw32/10.1.0/install-tools/: mkheaders
Unary.MinGW/share/info/: gcc.info  gccint.info
Unary.MinGW/x86_64-w64-mingw32/lib/ldscripts/: i386pe.x  i386pe.xa  i386pe.xbn  i386pe.xe  i386pe.xn  i386pe.xr  i386pe.xu  i386pep.x  i386pep.xa  i386pep.xbn  i386pep.xe  i386pep.xn  i386pep.xr  i386pep.xu
Unary.Recusant/: CMakeLists.txt
Unary.Recusant/Source/: Main.cpp
Unary.Shear/: CMakeLists.txt  List.txt  Make.unary  Makefile
Unary.Shear/Include/Unary.Make/Abstract/: Serializable.hpp
Unary.Shear/Include/Unary.Make/Enums/: ReturnCode.hpp
Unary.Shear/Include/Unary.Make/Units/: DepotID.hpp  DepotPath.hpp  DepotVersion.hpp
Unary.Shear/Include/Unary.Make/Utils/: Murmur.hpp
Unary.Shear/Include/Unary.Shear/: ImguiGL3.hpp  ImguiGLFW.hpp  Run.hpp  Test.hpp
Unary.Shear/Include/Unary.Shear/Core/: App.hpp  Events.hpp  Logger.hpp  Object.hpp  Profiler.hpp  StringHashes.hpp  Type.hpp  Variable.hpp
Unary.Shear/Include/Unary.Shear/Systems/: Arguments.hpp  IOContext.hpp  System.hpp  TempFiles.hpp
Unary.Shear/Include/Unary.Shear/Utils/: Filesystem.hpp  Murmur.hpp  String.hpp  TypeAccessor.hpp
Unary.Shear/Source/: ImguiGL3.cpp  ImguiGLFW.cpp  Main.cpp
Unary.Shear/Source/Core/: App.cpp  Events.cpp  Object.cpp  StringHashes.cpp  Type.cpp
Unary.Shear/Source/Utils/: EASTLAlloc.cpp  Filesystem.cpp  Murmur.cpp  String.cpp
Unary.Util/: Depot.json
Urho3D/include/Urho3D/: Urho3D.h
Urho3D/include/Urho3D/Container/: Vector.h
minizip/: Depot.json
rapidjson/: Depot.json
